force-app/main/default/objects/Opportunity/fields/Close_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reason__c</fullName>
    <description>if the opportunity stage is close lost specify the reason</description>
    <inlineHelpText>Reason for close lost</inlineHelpText>
    <label>Close Lost Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>