force-app/main/default/objects/Opportunity/fields/Contact_role_needed__c.field-meta.xml
<CustomField>
    <fullName>Contact_role_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact role needed</label>
    <type>Checkbox</type>
</CustomField>