force-app/main/default/objects/Opportunity/fields/Copied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Copied_Amount__c</fullName>
    <description>consists of same value as amount field</description>
    <formula>Amount *  Discount_Percentage__c  / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>