force-app/main/default/objects/Opportunity/fields/Quote_Negotiation_Required__c.field-meta.xml
<CustomField>
    <fullName>Quote_Negotiation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If negotitation is done check the box</inlineHelpText>
    <label>Quote Negotiation Required ?</label>
    <type>Checkbox</type>
</CustomField>