force-app/main/default/objects/Opportunity/fields/SubmitforApproval__c.field-meta.xml
<CustomField>
    <fullName>SubmitforApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SubmitforApproval</label>
    <type>Checkbox</type>
</CustomField>