force-app/main/default/objects/Opportunity/fields/Type_of_work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_work__c</fullName>
    <label>Type of work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>It</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>