force-app/main/default/objects/Opportunity/recordTypes/BPO.recordType-meta.xml
<RecordType>
    <fullName>BPO</fullName>
    <active>true</active>
    <businessProcess>BPO</businessProcess>
    <label>BPO</label>
</RecordType>