force-app/main/default/objects/Opportunity/recordTypes/Technology.recordType-meta.xml
<RecordType>
    <fullName>Technology</fullName>
    <active>true</active>
    <businessProcess>BPO</businessProcess>
    <label>Technology</label>
</RecordType>