force-app/main/default/objects/Opportunity/recordTypes/Transportation.recordType-meta.xml
<RecordType>
    <fullName>Transportation</fullName>
    <active>true</active>
    <businessProcess>BPO</businessProcess>
    <label>Transportation</label>
</RecordType>