force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  StageName  , &quot;Closed Lost&quot;), ISBLANK( Close_Lost_Reason__c ))</errorConditionFormula>
    <errorMessage>Give Reason before Close Lost</errorMessage>
</ValidationRule>