force-app/main/default/objects/Opportunity/validationRules/Opportunity_Discount_Exceeded_Above_40.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Discount_Exceeded_Above_40</fullName>
    <active>false</active>
    <errorConditionFormula>Discount_Percentage__c &gt; 0.40</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>Discount percentage cannot exceed beyond 40%</errorMessage>
</ValidationRule>